--- a/blocks/popup/__user-name/popup__user-name.css
+++ b/blocks/popup/__user-name/popup__user-name.css
@@ -4,9 +4,17 @@
 	border-bottom: 1px solid rgba(0,0,0,0.2);
 	max-width: 358px;
 	min-height: 27px;
-	padding-bottom: 9px;
-	margin: 50px auto 0;
+	margin: 48px auto 0;
 	width: 100%;
 	outline: none;
 	font-size: 14px;
+  padding: 0;
+  padding-bottom: 13px;
+}
+
+@media (max-width: 320px) {
+  .popup__user-name {
+    max-width: 238px;
+    margin: 75px auto 0;
+  }
 }
