--- a/blocks/element/__heart/element__heart.css
+++ b/blocks/element/__heart/element__heart.css
@@ -1,4 +1,4 @@
-.element__heart{
+.element__heart {
   background-image: url(../../../images/Heart.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -6,13 +6,11 @@
   height: 19px;
   border: none;
   cursor: pointer;
+  background-color: white;
 }
 
-.element__heart:active {
-  background-image: url(../../../images/Heart-black.svg);
-}
+
 
 .element__heart:hover {
   opacity: 0.5;
-}    
-
+}
