--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,8 +3,9 @@
   max-width: 312px;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 680px) {
   .profile__info {
     max-width: 199px;
+    margin-bottom: 33px;
   }
 }
