--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,10 @@
 .header {
   max-width: 880px;
   margin: 45px auto 0;
+  border-bottom: 1px solid #545454;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 680px) {
   .header {
     max-width: 320px;
     margin: 28px auto 0;
