--- a/blocks/popup/__window/popup__window.css
+++ b/blocks/popup/__window/popup__window.css
@@ -4,7 +4,7 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   background-color: #fff;
   width: 430px;
-  min-height: 330px;
+  height: 330px;
   margin: 0 auto 0;
 }
 
