--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,8 +4,8 @@
   margin-top: 40px;
   display: grid;
   grid-template-areas: 
-  "profile__avatar profile__info profile__edit-profile profile__add-button"
-  "profile__avatar profile__info profile__edit-profile profile__add-button";
+  "profile__avatar profile__info edit-profile profile__add-button"
+  "profile__avatar profile__info edit-profile profile__add-button";
   grid-template-columns: 150px 312px 1fr 150px;
 	grid-template-rows: 77px 1fr;
 
@@ -16,7 +16,7 @@
 		max-width: 282px;
 		grid-template-areas: 
 		"profile__avatar profile__avatar profile__avatar"
-		"null profile__info profile__edit-profile"
+		"null profile__info edit-profile"
 		"profile__add-button profile__add-button profile__add-button";
 		grid-template-columns: 1fr 199px 1fr;
 		grid-template-rows: 140px 1fr 50px;
