--- a/blocks/add-button/__icon/add-button__icon.css
+++ b/blocks/add-button/__icon/add-button__icon.css
@@ -3,3 +3,10 @@
   width: 22px;
   height: 22px;
 }
+
+@media (max-width: 680px) {
+  .add-button__icon {
+    width: 16px;
+    height: 16px;
+  }
+}
