--- a/blocks/edit-profile/edit-profile.css
+++ b/blocks/edit-profile/edit-profile.css
@@ -1,8 +1,17 @@
-.edit-profile{
+.edit-profile {
+	display: flex;
 	width: 24px;
 	height: 24px;
 	border: 1px solid #fff;
 	box-sizing: border-box;
 	background: none;
 	cursor: pointer;
+	grid-area: edit-profile;
+}
+
+@media (max-width: 680px) {
+	.edit-profile {
+		width: 16px;
+		height: 16px;
+	}
 }
