--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -11,7 +11,7 @@
   line-height: 22px;
   text-align: center;
   text-decoration: none;
-  margin: 48px auto 0;
+  margin: 48px auto 32px;
   cursor: pointer;
   padding: 0;
 }
@@ -24,7 +24,7 @@
   .popup__save-button {
     width: 238px;
     height: 46px;
-    margin: 45px auto 0;
+    margin: 45px auto 25px;
     font-size: 14px;
     line-height: 17px;
   }
