--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,6 @@
 .popup__title {
 	font-family: 'Inter', Arial, sans-serif;
-	margin: 34px 36px 0;
+	margin: 34px 36px 45px;
 	padding: 0;
 	font-weight: 900;
 	font-size: 24px;
@@ -12,6 +12,6 @@
 	.popup__title {
 		font-size: 18px;
 		line-height: 22px;
-		margin: 25px 22px 0;
+		margin: 25px 22px 75px;
 	}
 }
