--- a/blocks/profile/__edit-profile/profile__edit-profile.css
+++ b/blocks/profile/__edit-profile/profile__edit-profile.css
@@ -1,14 +1,16 @@
 .profile__edit-profile {
-  grid-area: profile__edit-profile;
-  margin-top: 15px;
+	margin-top: 37px;
+  padding: 0;
 }
 
-.profile__edit-profile:hover {
-  opacity: 0.6;
+@media (max-width: 740px) {
+	.profile__edit-profile {
+		margin-top: 36px;
+	}
 }
 
 @media (max-width: 680px) {
-  .profile__edit-profile {
-    margin-top: 8px;
-  }
+	.profile__edit-profile {
+		margin-top: 8px;
+	}
 }
