--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,4 +1,4 @@
-.profile__title{
+.profile__title {
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 500;
   font-size: 42px;
@@ -8,11 +8,13 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  margin-top: 22px;
 }
 
 @media (max-width: 680px) {
-	.profile__title {
+  .profile__title {
     font-size: 27px;
     line-height: 33px;
-	}
+    margin: 0;
+  }
 }
