--- a/pages/index.css
+++ b/pages/index.css
@@ -26,10 +26,10 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__form/popup__form.css);
-@import url(../blocks/popup/__opened/popup__opened.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/popup/__user-job/popup__user-job.css);
-@import url(../blocks/popup/__user-name/popup__user-name.css);
 @import url(../blocks/popup/__window/popup__window.css);
 @import url(../blocks/element/__heart/_active/element__heart-active.css);
+@import url(../blocks/popup/__form-input/popup__form-input.css);
+@import url(../blocks/main/main.css);
