--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,19 +1,26 @@
-.elements{
+.elements {
   display: grid;
-  margin: 0 auto;
+  margin: auto;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
-  gap:17px;
+  gap: 17px;
   justify-content: center;
   max-width: 880px;
   margin-top: 50px;
 }
 
 @media (max-width: 680px) {
-	.elements {
-		grid-template-columns: repeat(1, 1fr);
+  .elements {
+    grid-template-columns: repeat(1, 1fr);
     max-width: 282px;
     margin: auto;
     margin-top: 36px;
-    gap:20px;
-	}
+    gap: 20px;
+  }
+}
+
+@media (min-width: 681px) and (max-width: 879px) {
+  .elements {
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 581px;
+  }
 }
