--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -3,5 +3,6 @@
   height: 361px;
   background-color:white;
   display: grid;
-  border-radius: 10px;
+  border-radius: 10px 10px 0 0;
+  position: relative;
 }
