--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,4 +1,4 @@
-.popup__save-button {
+.popup__button {
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
   background-color: #000;
@@ -16,12 +16,12 @@
   padding: 0;
 }
 
-.popup__save-button:hover {
+.popup__button:hover {
   opacity: 0.8;
 }
 
 @media (max-width: 680px) {
-  .popup__save-button {
+  .popup__button {
     width: 238px;
     height: 46px;
     margin: 45px auto 25px;
