--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,4 @@
-.popup__window {
+.popup__container{
   position: relative;
   border-radius: 10px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
@@ -8,7 +8,7 @@
 }
 
 @media (max-width: 680px) {
-	.popup__window {
+	.popup__container{
 		width: 282px;
 	}
 }
