--- a/pages/index.css
+++ b/pages/index.css
@@ -24,12 +24,13 @@
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/__close-button/popup__close-button.css);
+@import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__form/popup__form.css);
-@import url(../blocks/popup/_opened/popup_opened.css);
-@import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__edit-profile/popup_edit-profile.css.css);
+@import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/popup/__window/popup__window.css);
+@import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/element/__heart/_active/element__heart-active.css);
 @import url(../blocks/popup/__form-input/popup__form-input.css);
 @import url(../blocks/main/main.css);
+@import url(../blocks/element/__delete/element__delete.css);
