--- a/blocks/element/__heart/_active/element__heart-active.css
+++ b/blocks/element/__heart/_active/element__heart-active.css
@@ -1,3 +1,3 @@
-.element__heart_active {
-  background-image: url(../../../images/Heart-black.svg);
-} 
+.element__heart_active{
+  background: transparent url(../../../../images/Heart-black.svg);
+}
