--- a/pages/index.css
+++ b/pages/index.css
@@ -34,3 +34,4 @@
 @import url(../blocks/popup/__form-input/popup__form-input.css);
 @import url(../blocks/main/main.css);
 @import url(../blocks/element/__delete/element__delete.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
