--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,7 @@
 @import url(../blocks/main/main.css);
 @import url(../blocks/element/__delete/element__delete.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup-image/__caption/popup-image__caption.css);
+@import url(../blocks/popup-image/__figure/popup-image__figure.css);
+@import url(../blocks/popup-image/__picture/popup-image__picture.css);
+@import url(../blocks/popup-image/popup-image.css);
