--- a/blocks/element/__foto/element__foto.css
+++ b/blocks/element/__foto/element__foto.css
@@ -1,7 +1,7 @@
 .element__foto{
   object-fit: cover;
-  max-width: 100%;
-  max-height: 282px;
+  width: 100%;
+  height: 282px;
   border-radius: 10px 10px 0 0;
   display: block;
 }
