--- a/blocks/profile/__description/profile__subtitle.css
+++ b/blocks/profile/__description/profile__subtitle.css
@@ -1,4 +1,4 @@
-.profile__subtitle{
+.profile__description{
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -12,7 +12,7 @@
 }
 
 @media (max-width: 680px) {
-	.profile__subtitle {
+	.profile__description {
     font-size: 14px;
     line-height: 17px;
     max-width: 189px;
