--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,4 +1,4 @@
-.profile__title {
+.profile__name {
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 500;
   font-size: 42px;
@@ -12,7 +12,7 @@
 }
 
 @media (max-width: 680px) {
-  .profile__title {
+  .profile__name {
     font-size: 27px;
     line-height: 33px;
     margin: 0;
