--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,4 +10,7 @@
 	right: 0;
 	bottom: 0;
 	position: fixed;
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0.3s, opacity 0.3s linear;
 }
