--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,6 @@
 .popup {
 	background: rgba(0, 0, 0, 0.5);
-	display: none;
+	display: flex;
 	justify-content: center;
 	align-items: center;
 	position: fixed;
